# simple-webfinger

./: .gitignore  Dockerfile  Makefile  README.md  app.py  example-config.yaml  pyproject.toml  requirements.txt
.github/: renovate.json
.github/workflows/: build-docker-image.yaml  tests.yaml
examples/: example-config.yaml
simple_webfinger/: app.py
simple_webfinger/models/: webfinger.py
tests/: conftest.py  test_basic.py
