[tool.poetry]
name = "simple-webfinger"
version = "0.1.0"
description = "A simple, Flask-based webfinger handler."
authors = ["Andrew Williams <andy@tensixtyone.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
PyYAML = "^6.0.2"
uvicorn = "^0.30.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
