[project]
name = "simple-webfinger"
version = "0.1.1"
description = "A simple, Flask-based webfinger handler."
authors = [
    { name = "Andrew Williams", email = "andy@tensixtyone.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0.3",
    "PyYAML>=6.0.2",
    "pydantic>=2.8.2",
    "prometheus-flask-exporter>=0.23.1",
    "gunicorn>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.12.0",
    "pytest-mock>=3.12.0",
    "pytest-flask>=1.3.0",
]
github = [
    "pytest-github-actions-annotate-failures>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
